{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 128,
  "lineage": "c2de4b7a-37a9-8216-6045-0f6cfefdec9a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0246d748747802dd0",
            "arn": "arn:aws:ec2:us-east-2:262591942794:elastic-ip/eipalloc-0246d748747802dd0",
            "association_id": "eipassoc-0dfa28684917d2f80",
            "domain": "vpc",
            "id": "eipalloc-0246d748747802dd0",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0ac93d6edcabdbddb",
            "private_dns": "ip-10-0-1-248.us-east-2.compute.internal",
            "private_ip": "10.0.1.248",
            "public_dns": "ec2-3-135-77-180.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.77.180",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "goalaroo-nat-eip-1"
            },
            "tags_all": {
              "Name": "goalaroo-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d41dcbb86e3a42c7",
            "arn": "arn:aws:ec2:us-east-2:262591942794:elastic-ip/eipalloc-0d41dcbb86e3a42c7",
            "association_id": "eipassoc-09103134ed4ab0ce6",
            "domain": "vpc",
            "id": "eipalloc-0d41dcbb86e3a42c7",
            "network_border_group": "us-east-2",
            "network_interface": "eni-01bd191873e5242b7",
            "private_dns": "ip-10-0-2-75.us-east-2.compute.internal",
            "private_ip": "10.0.2.75",
            "public_dns": "ec2-3-148-7-123.us-east-2.compute.amazonaws.com",
            "public_ip": "3.148.7.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "goalaroo-nat-eip-2"
            },
            "tags_all": {
              "Name": "goalaroo-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262591942794:internet-gateway/igw-09483f742824d7420",
            "id": "igw-09483f742824d7420",
            "owner_id": "262591942794",
            "tags": {
              "Name": "goalaroo-igw"
            },
            "tags_all": {
              "Name": "goalaroo-igw"
            },
            "vpc_id": "vpc-0ba3831717bf571a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:262591942794:loadbalancer/app/goalaroo-alb/e5042d8b5756a3a9",
            "arn_suffix": "app/goalaroo-alb/e5042d8b5756a3a9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "goalaroo-alb-1541648613.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:262591942794:loadbalancer/app/goalaroo-alb/e5042d8b5756a3a9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "goalaroo-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09a4625765c8859e5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0223e551305735020"
              },
              {
                "subnet_id": "subnet-0de28500840fb1182"
              }
            ],
            "subnets": [
              "subnet-0223e551305735020",
              "subnet-0de28500840fb1182"
            ],
            "tags": {
              "Name": "goalaroo-alb"
            },
            "tags_all": {
              "Name": "goalaroo-alb"
            },
            "vpc_id": "vpc-0ba3831717bf571a0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:262591942794:listener/app/goalaroo-alb/e5042d8b5756a3a9/c6f6fd83234f5c06",
            "certificate_arn": "arn:aws:acm:us-east-2:262591942794:certificate/4ed5207e-a46d-412f-9949-31c5901815e2",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:262591942794:targetgroup/goalaroo-tg/90cc07f95bb9fb4f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:262591942794:listener/app/goalaroo-alb/e5042d8b5756a3a9/c6f6fd83234f5c06",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:262591942794:loadbalancer/app/goalaroo-alb/e5042d8b5756a3a9",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.api",
            "aws_acm_certificate_validation.api",
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_route53_record.api_cert_validation",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_route53_zone.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:262591942794:listener/app/goalaroo-alb/e5042d8b5756a3a9/63f495569df2bc45",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:262591942794:listener/app/goalaroo-alb/e5042d8b5756a3a9/63f495569df2bc45",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:262591942794:loadbalancer/app/goalaroo-alb/e5042d8b5756a3a9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:262591942794:targetgroup/goalaroo-tg/90cc07f95bb9fb4f",
            "arn_suffix": "targetgroup/goalaroo-tg/90cc07f95bb9fb4f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:262591942794:targetgroup/goalaroo-tg/90cc07f95bb9fb4f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:262591942794:loadbalancer/app/goalaroo-alb/e5042d8b5756a3a9"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "goalaroo-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "goalaroo-target-group"
            },
            "tags_all": {
              "Name": "goalaroo-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ba3831717bf571a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0246d748747802dd0",
            "association_id": "eipassoc-0dfa28684917d2f80",
            "connectivity_type": "public",
            "id": "nat-0754d3e9dec2f7044",
            "network_interface_id": "eni-0ac93d6edcabdbddb",
            "private_ip": "10.0.1.248",
            "public_ip": "3.135.77.180",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0223e551305735020",
            "tags": {
              "Name": "goalaroo-nat-gateway-1"
            },
            "tags_all": {
              "Name": "goalaroo-nat-gateway-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d41dcbb86e3a42c7",
            "association_id": "eipassoc-09103134ed4ab0ce6",
            "connectivity_type": "public",
            "id": "nat-008b8db8f2e78395d",
            "network_interface_id": "eni-01bd191873e5242b7",
            "private_ip": "10.0.2.75",
            "public_ip": "3.148.7.123",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de28500840fb1182",
            "tags": {
              "Name": "goalaroo-nat-gateway-2"
            },
            "tags_all": {
              "Name": "goalaroo-nat-gateway-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262591942794:route-table/rtb-0a80c644ea6b5dc08",
            "id": "rtb-0a80c644ea6b5dc08",
            "owner_id": "262591942794",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0754d3e9dec2f7044",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "goalaroo-private-rt-1"
            },
            "tags_all": {
              "Name": "goalaroo-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba3831717bf571a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262591942794:route-table/rtb-0a9f52409eb06df48",
            "id": "rtb-0a9f52409eb06df48",
            "owner_id": "262591942794",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-008b8db8f2e78395d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "goalaroo-private-rt-2"
            },
            "tags_all": {
              "Name": "goalaroo-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba3831717bf571a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262591942794:route-table/rtb-0707f9d2a63635d53",
            "id": "rtb-0707f9d2a63635d53",
            "owner_id": "262591942794",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09483f742824d7420",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "goalaroo-public-rt"
            },
            "tags_all": {
              "Name": "goalaroo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba3831717bf571a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b726e38f77bd139",
            "route_table_id": "rtb-0a80c644ea6b5dc08",
            "subnet_id": "subnet-014013f9a781f39c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018f5b695c3f3309c",
            "route_table_id": "rtb-0a9f52409eb06df48",
            "subnet_id": "subnet-07b2982af6e853bff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029f2d7382c38eea4",
            "route_table_id": "rtb-0707f9d2a63635d53",
            "subnet_id": "subnet-0223e551305735020"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0763ea0cf354fbc54",
            "route_table_id": "rtb-0707f9d2a63635d53",
            "subnet_id": "subnet-0de28500840fb1182"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262591942794:security-group/sg-09a4625765c8859e5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a4625765c8859e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "goalaroo-alb-20250707181113611400000003",
            "name_prefix": "goalaroo-alb-",
            "owner_id": "262591942794",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "goalaroo-alb-sg"
            },
            "tags_all": {
              "Name": "goalaroo-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba3831717bf571a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262591942794:security-group/sg-011642784caf33c2e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011642784caf33c2e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09a4625765c8859e5"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "goalaroo-ecs-20250707181116156700000006",
            "name_prefix": "goalaroo-ecs-",
            "owner_id": "262591942794",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "goalaroo-ecs-sg"
            },
            "tags_all": {
              "Name": "goalaroo-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba3831717bf571a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262591942794:subnet/subnet-014013f9a781f39c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014013f9a781f39c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262591942794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "goalaroo-private-subnet-1"
            },
            "tags_all": {
              "Name": "goalaroo-private-subnet-1"
            },
            "vpc_id": "vpc-0ba3831717bf571a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262591942794:subnet/subnet-07b2982af6e853bff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b2982af6e853bff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262591942794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "goalaroo-private-subnet-2"
            },
            "tags_all": {
              "Name": "goalaroo-private-subnet-2"
            },
            "vpc_id": "vpc-0ba3831717bf571a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262591942794:subnet/subnet-0223e551305735020",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0223e551305735020",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "262591942794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "goalaroo-public-subnet-1"
            },
            "tags_all": {
              "Name": "goalaroo-public-subnet-1"
            },
            "vpc_id": "vpc-0ba3831717bf571a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262591942794:subnet/subnet-0de28500840fb1182",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de28500840fb1182",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "262591942794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "goalaroo-public-subnet-2"
            },
            "tags_all": {
              "Name": "goalaroo-public-subnet-2"
            },
            "vpc_id": "vpc-0ba3831717bf571a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262591942794:vpc/vpc-0ba3831717bf571a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f811af9d7e92649",
            "default_route_table_id": "rtb-09d5eacba1b70f9c7",
            "default_security_group_id": "sg-09311cad1d14680b2",
            "dhcp_options_id": "dopt-e296bc8b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba3831717bf571a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d5eacba1b70f9c7",
            "owner_id": "262591942794",
            "tags": {
              "Name": "goalaroo-vpc"
            },
            "tags_all": {
              "Name": "goalaroo-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}